# alpha2

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: RD_Amortization.xlsx  betas.xlsx  defaultSpread.xlsx
src/: av_fcff.ipynb  av_fcff.py  av_fcff_2.py  av_financials.py  hg_dcflib.py
