[project]
name = "alpha2"
version = "0.1.0"
description = "Python Modules that will automate the ca;cu;lation the intrinsic value of a stock"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "certifi>=2025.4.26",
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "requests>=2.32.3",
]
